se corrigio el correo de contacto

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                     <li id="hobbies"><a href="#areaHobbies">Hobbies</a></li>
                     <li id="formacion"><a href="#areaFormacion">Formación</a></li>
                     <li id="proyectos"><a href="#areaProfesional">Proyectos</a></li>
-                    <li id="email"><a href="mailto:jgcardenas3@gmail.com">Contacto@fulana.com</a></li>
+                    <li id="email"><a href="mailto:jgcardenas3@gmail.com">jgcardenas3@gmail.com</a></li>
                 
                 </ul>
             </nav>
@@ -60,7 +60,7 @@
                         <ul class="linkSocial">
                             <li><a href="https://github.com/JGCardenasMX">Github 🡥</a></li>
                             <li><a href="https://www.linkedin.com/in/javier-gerardo-cardenas-castaneda-11783322a/">Linkedin 🡥</a></li>
-                            <li><a href="">Curriculo 🡥</a></li>
+                            <li><a href="/cv/curiculum profesional A4 tamaño carta.pdf">Curriculo 🡥</a></li>
                         </ul>
                     </div>
                 </div>
