se mejoro la descarga del curriculum

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                         <ul class="linkSocial">
                             <li><a href="https://github.com/JGCardenasMX">Github 🡥</a></li>
                             <li><a href="https://www.linkedin.com/in/javier-gerardo-cardenas-castaneda-11783322a/">Linkedin 🡥</a></li>
-                            <li><a href="/cv/curiculum profesional A4 tamaño carta.pdf">Curriculo 🡥</a></li>
+                            <li><a href="https://github.com/JGCardenasMX/Challenge-Front-End/raw/master/cv/curiculum.pdf">Curriculo 🡥</a></li>
                         </ul>
                     </div>
                 </div>
