Se corrigieron errores en el pie de página y de firma

--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
                     </div>
                 </div>
                 <div class="piePagina">
-                    <h2>Desarrollado por Fulana de Tal <br> 2022</h2>
+                    <h2>Desarrollado por Javier Gerardo Cárdenas Castañeda <br> 2022</h2>
                 </div>
             </section>
             
